force-app/main/default/objects/CMIT12_Consip_Milestone_Duration__mdt/CMIT12_Consip_Milestone_Duration__mdt.object-meta.xml
<CustomObject>
    <label>Consip Milestone Duration</label>
    <pluralLabel>Consip Milestone Durations</pluralLabel>
</CustomObject>