force-app/main/default/objects/CMIT12_Consip_Milestone_Duration__mdt/fields/IT_BPE_1_Elettronico__c.field-meta.xml
<CustomField>
    <fullName>IT_BPE_1_Elettronico__c</fullName>
    <label>BPE 1 Elettronico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>