force-app/main/default/objects/CMIT12_Consip_Milestone_Duration__mdt/fields/IT_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>